test_regress/t/t_class_override_bad.out
%Error: t/t_class_override_bad.v:23:25: Member 'get_e' marked ':extends' but no base class function is being extend (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   23 |   function :extends int get_e; return 1; endfunction   
      |                         ^~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_class_override_bad.v:25:32: Member 'get_ef' marked ':extends' but no base class function is being extend (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   25 |   function :extends :final int get_ef; return 1; endfunction   
      |                                ^~~~~~
%Error: t/t_class_override_bad.v:56:25: Member 'get_x_e' marked ':extends' but no base class function is being extend (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   56 |   function :extends int get_x_e; return 1; endfunction   
      |                         ^~~~~~~
%Error: t/t_class_override_bad.v:57:32: Member 'get_x_ef' marked ':extends' but no base class function is being extend (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   57 |   function :extends :final int get_x_ef; return 1; endfunction   
      |                                ^~~~~~~~
%Error: t/t_class_override_bad.v:65:25: Member 'get_n_i' is marked ':initial' but is being extended (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   65 |   function :initial int get_n_i; return 1; endfunction   
      |                         ^~~~~~~
        t/t_class_override_bad.v:19:16: ... Location of declaration being extended
   19 |   function int get_n_i; return 1; endfunction
      |                ^~~~~~~
%Error: t/t_class_override_bad.v:66:32: Member 'get_n_if' is marked ':initial' but is being extended (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   66 |   function :initial :final int get_n_if; return 1; endfunction   
      |                                ^~~~~~~~
        t/t_class_override_bad.v:20:16: ... Location of declaration being extended
   20 |   function int get_n_if; return 1; endfunction
      |                ^~~~~~~~
%Error: t/t_class_override_bad.v:74:25: Member 'get_i_i' is marked ':initial' but is being extended (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   74 |   function :initial int get_i_i; return 1; endfunction   
      |                         ^~~~~~~
        t/t_class_override_bad.v:31:25: ... Location of declaration being extended
   31 |   function :initial int get_i_i; return 1; endfunction
      |                         ^~~~~~~
%Error: t/t_class_override_bad.v:75:32: Member 'get_i_if' is marked ':initial' but is being extended (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   75 |   function :initial :final int get_i_if; return 1; endfunction   
      |                                ^~~~~~~~
        t/t_class_override_bad.v:32:25: ... Location of declaration being extended
   32 |   function :initial int get_i_if; return 1; endfunction
      |                         ^~~~~~~~
%Error: t/t_class_override_bad.v:78:16: Member 'get_if_n' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   78 |   function int get_if_n; return 1; endfunction   
      |                ^~~~~~~~
        t/t_class_override_bad.v:36:32: ... Location of ':final' declaration being extended
   36 |   function :initial :final int get_if_n; return 1; endfunction
      |                                ^~~~~~~~
%Error: t/t_class_override_bad.v:79:25: Member 'get_if_e' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   79 |   function :extends int get_if_e; return 1; endfunction   
      |                         ^~~~~~~~
        t/t_class_override_bad.v:37:32: ... Location of ':final' declaration being extended
   37 |   function :initial :final int get_if_e; return 1; endfunction
      |                                ^~~~~~~~
%Error: t/t_class_override_bad.v:80:32: Member 'get_if_ef' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   80 |   function :extends :final int get_if_ef; return 1; endfunction   
      |                                ^~~~~~~~~
        t/t_class_override_bad.v:38:32: ... Location of ':final' declaration being extended
   38 |   function :initial :final int get_if_ef; return 1; endfunction
      |                                ^~~~~~~~~
%Error: t/t_class_override_bad.v:81:25: Member 'get_if_i' is marked ':initial' but is being extended (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   81 |   function :initial int get_if_i; return 1; endfunction   
      |                         ^~~~~~~~
        t/t_class_override_bad.v:39:32: ... Location of declaration being extended
   39 |   function :initial :final int get_if_i; return 1; endfunction
      |                                ^~~~~~~~
%Error: t/t_class_override_bad.v:81:25: Member 'get_if_i' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   81 |   function :initial int get_if_i; return 1; endfunction   
      |                         ^~~~~~~~
        t/t_class_override_bad.v:39:32: ... Location of ':final' declaration being extended
   39 |   function :initial :final int get_if_i; return 1; endfunction
      |                                ^~~~~~~~
%Error: t/t_class_override_bad.v:82:32: Member 'get_if_if' is marked ':initial' but is being extended (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   82 |   function :initial :final int get_if_if; return 1; endfunction   
      |                                ^~~~~~~~~
        t/t_class_override_bad.v:40:32: ... Location of declaration being extended
   40 |   function :initial :final int get_if_if; return 1; endfunction
      |                                ^~~~~~~~~
%Error: t/t_class_override_bad.v:82:32: Member 'get_if_if' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   82 |   function :initial :final int get_if_if; return 1; endfunction   
      |                                ^~~~~~~~~
        t/t_class_override_bad.v:40:32: ... Location of ':final' declaration being extended
   40 |   function :initial :final int get_if_if; return 1; endfunction
      |                                ^~~~~~~~~
%Error: t/t_class_override_bad.v:83:23: Member 'get_if_f' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   83 |   function :final int get_if_f; return 1; endfunction   
      |                       ^~~~~~~~
        t/t_class_override_bad.v:41:32: ... Location of ':final' declaration being extended
   41 |   function :initial :final int get_if_f; return 1; endfunction
      |                                ^~~~~~~~
%Error: t/t_class_override_bad.v:85:16: Member 'get_f_n' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   85 |   function int get_f_n; return 1; endfunction   
      |                ^~~~~~~
        t/t_class_override_bad.v:44:23: ... Location of ':final' declaration being extended
   44 |   function :final int get_f_n; return 1; endfunction
      |                       ^~~~~~~
%Error: t/t_class_override_bad.v:86:25: Member 'get_f_e' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   86 |   function :extends int get_f_e; return 1; endfunction   
      |                         ^~~~~~~
        t/t_class_override_bad.v:45:23: ... Location of ':final' declaration being extended
   45 |   function :final int get_f_e; return 1; endfunction
      |                       ^~~~~~~
%Error: t/t_class_override_bad.v:87:32: Member 'get_f_ef' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   87 |   function :extends :final int get_f_ef; return 1; endfunction   
      |                                ^~~~~~~~
        t/t_class_override_bad.v:46:23: ... Location of ':final' declaration being extended
   46 |   function :final int get_f_ef; return 1; endfunction
      |                       ^~~~~~~~
%Error: t/t_class_override_bad.v:88:25: Member 'get_f_i' is marked ':initial' but is being extended (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   88 |   function :initial int get_f_i; return 1; endfunction   
      |                         ^~~~~~~
        t/t_class_override_bad.v:47:23: ... Location of declaration being extended
   47 |   function :final int get_f_i; return 1; endfunction
      |                       ^~~~~~~
%Error: t/t_class_override_bad.v:88:25: Member 'get_f_i' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   88 |   function :initial int get_f_i; return 1; endfunction   
      |                         ^~~~~~~
        t/t_class_override_bad.v:47:23: ... Location of ':final' declaration being extended
   47 |   function :final int get_f_i; return 1; endfunction
      |                       ^~~~~~~
%Error: t/t_class_override_bad.v:89:32: Member 'get_f_if' is marked ':initial' but is being extended (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   89 |   function :initial :final int get_f_if; return 1; endfunction   
      |                                ^~~~~~~~
        t/t_class_override_bad.v:48:23: ... Location of declaration being extended
   48 |   function :final int get_f_if; return 1; endfunction
      |                       ^~~~~~~~
%Error: t/t_class_override_bad.v:89:32: Member 'get_f_if' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   89 |   function :initial :final int get_f_if; return 1; endfunction   
      |                                ^~~~~~~~
        t/t_class_override_bad.v:48:23: ... Location of ':final' declaration being extended
   48 |   function :final int get_f_if; return 1; endfunction
      |                       ^~~~~~~~
%Error: t/t_class_override_bad.v:90:23: Member 'get_f_f' is being extended from member marked ':final' (IEEE 1800-2023 8.20)
                                      : ... note: In instance 't'
   90 |   function :final int get_f_f; return 1; endfunction   
      |                       ^~~~~~~
        t/t_class_override_bad.v:49:23: ... Location of ':final' declaration being extended
   49 |   function :final int get_f_f; return 1; endfunction
      |                       ^~~~~~~
%Error: t/t_class_override_bad.v:102:42: Class 'CClsBadExtendsFinal' is being extended from class marked ':final' (IEEE 1800-2023 8.20)
                                       : ... note: In instance 't'
  102 | class :final CClsBadExtendsFinal extends CClsF;
      |                                          ^~~~~
        t/t_class_override_bad.v:99:1: ... Location of ':final' class being extended
   99 | class :final CClsF extends CBase;
      | ^~~~~
%Error: Exiting due to
